# CEngine

./: CMakeLists.txt  LICENSE  cmake_install.cmake  main.cc
Engine/: Camera.cc  Camera.h  Color.h  Engine.cc  Engine.h  EngineException.h  Input.cc  Input.h  Object.cc  Object.h  Platform.h  RoundObject.cc  RoundObject.h  SquareObject.cc  SquareObject.h  Vector2.h
lib/windows/: box2d.lib  glad.lib  glfw.lib  imgui.lib  sajson.lib
